# xueqiu

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  fly.toml  pyproject.toml  users.txt
docs/: 使用本地Chrome(CDP)操作指南.md  数据流转与抓取说明.md
scripts/: backfill_posts_assertions_meta.py  backfill_raw_records.py  backfill_usernames.py  manual_browser_clone_test.py  rebuild_entries_from_raw_records.py  repair_truncated_details.py  sync_to_turso.py  test_cdp_fetch.py  test_topic_prompt.py  test_topic_prompt_tree.py.bak
scripts/sync_to_turso_lib/: __init__.py  schema.py  session.py  sql_build.py  sync.py
src/xueqiu_crawler/: __init__.py  browser.py  cli.py  constants.py  detail_retry_worker.py  http_api.py  http_debug.py  rate_limit.py  rss_server.py  sqlite_maintenance.py  storage.py  text_sanitize.py  xq_api.py
tests/: test_http_debug_logging.py  test_rss_raw_text.py  test_rss_refresh_failure_policy.py  test_sync_to_turso.py
