[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xueqiu-crawler"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "litellm>=1.82.1",
  "fastapi>=0.111.0",
  "libsql",
  "playwright>=1.41",
  "playwright-stealth>=2.0.2",
  "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
  "pre-commit",
  "ruff",
  "mypy",
]

[project.scripts]
xq-crawl = "xueqiu_crawler.cli:main"
xq-rss = "xueqiu_crawler.rss_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
mypy_path = ["."]
ignore_missing_imports = true

[tool.vulture]
paths = ["."]
exclude = ["venv", ".venv", ".uv-cache", ".pre-commit-cache"]
sort_by_size = true
ignore_names = [
  "pytest_configure",
  "do_GET",
  "log_message",
  "server_version",
  "_access_log",
  "root",
  "healthz",
  "user_rss",
]
